# simple-dsp

./: README.md  SimpleDSP-IIR.html  SimpleDSP-IO.html  SimpleDSP-Samples.html  cabal.project  doc-index.html  doc-index.json  flake.nix  index.html  simple-dsp.cabal  simple-dsp.haddock
app/: Player.hs  SimpleGUI.hs
src/SimpleDSP/: GUI.hs  IIR.hs  IO.hs  Samples.hs
