cabal-version:      3.0
name:               simple-dsp
version:            0.1
synopsis:           A simple digital signal processor.
description:        This library provides dsp primitives.
category:           Sound
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/TristanCacqueray/simple-dsp

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    PartialTypeSignatures
    OverloadedStrings
    OverloadedRecordDot
    StrictData

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    SimpleDSP.IIR
    SimpleDSP.IO
    SimpleDSP.Samples
  build-depends:
    -- for IO
    , bytestring < 2
    , typed-process < 2
    -- for IIR
    , transformers < 2
    , vector < 2

test-suite spec
  import:          common
  hs-source-dirs: test
  main-is: Spec.hs
  type: exitcode-stdio-1.0

executable simple-dsp-player
  import:         common
  hs-source-dirs: app
  main-is:        Player.hs
  other-modules:  SimpleGUI
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , containers
    , dear-imgui < 3
    , gl < 2
    , managed < 2
    , sdl2 < 3
    , simple-dsp
    , vector < 2
    , rio < 2
    , witch < 2
